page alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,70 +1,129 @@
-body {
- /*   display: flex;
+html, body, #wrapper {
+/*    display: flex;
     flex-direction: column;
     justify-content: space-between;*/
     background-color: grey;
     width: 100%;
-    min-height: 825px;
-    margin: auto;
+/*    min-height: 400px;*/
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-#topbar {
+#wrapper {
+    position: relative;
+}
+#navbar, #core {
+    position: absolute;
+}
+
+#navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-/*    padding: 4px;*/
     width: 100%;
-    min-height: 40px;
-    height: 100%;
+    height: 40px;
     background-color: orange;
 /*    border: 2px solid pink;*/
 }
 
 #logopane {
-    min-height: 36px;
-    width: 50%;
+/*    min-height: 36px;*/
+    width: 60%;
     height: 100%;
     background-color: cyan;
 /*    border: 2px solid lime;*/
 }
 
-#actionpane {
-    /*display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 4px; */
-    min-height: 36px;
-    width: 50%;
-    height: 100%;
-        background-color: brown;
-
+#logo-text {
+    font-family: monospace;
+    font-size: 32px;
+    margin: auto;
+    padding-left: 10px;
 /*    border: 2px solid lime;*/
 }
 
+#actionpane {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+/*    width: 40%;*/
+    padding: 0px 10px 0px 10px;
+    max-width: 400px;
+    height: 100%;
+    background-color: brown;
+/*    border: 2px solid lime;*/
+}
 
-#middlebar {
+.action-btn {
+    border: none;
+    color: white;
+    padding: 8px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+/*    margin: auto;*/
+    cursor: pointer;
+    margin-right: 10px;
+    margin-left: 10px;
+
+}
+
+#btn-run { background-color: green; } 
+#btn-stop { background-color: red; } 
+#btn-download { background-color: orange; } 
+
+
+
+#core {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: grey;
+    top: 40px;
+    bottom: 0;
+/*    min-height: 400px;*/
     width: 100%;
-    height: 1000px;
-    background-color: green;
+/*    height: 100%;*/
+/*    background-color: green;*/
+/*    margin-top: 10px;*/
 /*    border: 2px solid red;*/
 }
 
 
 #fileexplorer {
+/*    float: left;*/
+/*    min-width: 200px;*/
     width: 25%;
-    height: 100%;
-    background-color: beige;
+/*    min-height: 400px;*/
+/*    height: 100%;*/
+    background-color: yellow;
 /*    border: 2px solid cyan;*/
 }
 
 #container {
+    position: relative;
     width: 75%;
-    height: 100%;
+/*    height: 100%;*/
 }
+
+#editor, #terminal {
+    position: absolute;
+}
+
+#editor {
+    top: 0;
+    bottom: 200px;
+    width: 100%;
+}
+#terminal {
+    bottom: 0;
+    height: 200px;
+    width: 100%;
+    background-color: black;
+}
+
+
 
 /* Tweaking API default styles */
 .CodeMirror {
@@ -72,7 +131,7 @@ body {
     font-family: monospace, 'Courier New', Courier;
     font-size: 18px;
     height: 100%;
-    width: 100%;
+/*    width: 100%;*/
 }
 
 .CodeMirror-gutter {
